Changes since 0.2.8.3_rc2:
- Fixed crash with server polling
- ROUND_WINNER and MATCH_WINNER logged to ladderlog
- Camera switches to user preferred camera when you die in incam mode
- Better support for custom language files
- Players can no longer spam chat with /shuffle messages. Added new setting
  SHUFFLE_SPAM_MESSAGES_PER_ROUND, a per round, per player limit on the number
  of shuffle messages displayed.

Changes since 0.2.8.3_rc1:
- Fixed dark color filters, such as FILTER_DARK_COLOR_STRINGS, to not filter
  the reset color.
- ASE moviepack models no longer have a vertex count limit
- Fixed endless recursion crash between rounds

Changes since 0.2.8.3_beta3:
- Chat prefix spam protection. Guards against prefix spam, such as when a
  user always changes their chat message color, or prefixes all messages
  with a clan tag. Toggle with the PREFIX_SPAM_ENABLE setting.
- Fixed VOTING_MATURITY to use the time when the player entered as its 
  reference time.
- Fixed single player highscore list not containing everyone.
- Fixed generation of duplicate names in highscore lists.
- Fixed camera crash when the grid is empty.

Changes since 0.2.8.3_beta2:
- Fixed 'invincibility' bug. It really was cycles freezing in time.
- Fixed sporadic sound related crash at round end.
- setting rename: SILENCE_ALL -> SILENCE_DEFAULT.
- Sound no longer gets muted after you switch the sound settings.
- Fixed object collision detection that would sometimes pick a wrong 
  wall to collide with, most likely the reason behind wrongly accredited
  kills.
- Fixed inability to switch viewport assignment in four player mode.
- Better handling of lag clusterbombs.
- Server disconnects now also take immediate effect even when you're
  in a menu or chatting.

Changes since 0.2.8.3_beta1:
- Made ready for Armatrators
- Authentication routines now use utf8 as forward- compatibility with
  trunk. Previously, non-ASCII usernames simply didn't work at all.