@@ -427,11 +427,12 @@ LEGACY_LOG_NAMES 0
 
 # You can reserve a screen name to a certain user:
 
-# RESERVE_SCREEN_NAME <user> <screen name>
+# RESERVE_SCREEN_NAME <screen name> <user>
 
 # All other players, authenticated or not, will not be able to change their
-# screen name to the picked name, then.The command is of course only
-# of use if you have set ALLOW_IMPOSTORS to 0.
+# screen name to the picked name, then.  Use quotes around the screen name
+# if it contains spaces, or replace the spaces with _. @s in the screen name
+# need to be escaped ( @ -> \@ ).
 
 # You can bend authenticated user names around with
 
